NIHVIVO-2095: Fixed overlap of long primary and additional links

--- a/webapp/web/css/individual/individual.css
+++ b/webapp/web/css/individual/individual.css
@@ -163,7 +163,8 @@ ul.individual-urls-people li {
     font-size: .875em;
     line-height: 1.3em;
 }
-ul.individual-urls-people li a {
+ul#links-additional li, ul#links-primary li {
+    width: 145px;
     word-wrap: break-word;
 }
 #photo-wrapper {
